--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "vue": "^3.4.21",
     "vercel": "^33.7.1",
+    "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -31,6 +31,8 @@
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.1.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
